@@ -77,7 +77,7 @@ SpimView::SpimView(QWidget *parent) :
     SpimConsole->show();
     ui->action_Win_Console->setChecked(true);
 
-    programRunning = false;
+    programState = stopped;
 }
 
 
@@ -102,6 +102,7 @@ void SpimView::wireCommands()
     QObject::connect(ui->action_Sim_Reinitialize, SIGNAL(triggered(bool)), this, SLOT(sim_ReinitializeSimulator()));
     QObject::connect(ui->action_Sim_SetRunParameters, SIGNAL(triggered(bool)), this, SLOT(sim_SetRunParameters()));
     QObject::connect(ui->action_Sim_Run, SIGNAL(triggered(bool)), this, SLOT(sim_Run()));
+    QObject::connect(ui->action_Sim_Pause, SIGNAL(triggered(bool)), this, SLOT(sim_Pause()));
     QObject::connect(ui->action_Sim_Stop, SIGNAL(triggered(bool)), this, SLOT(sim_Stop()));
     QObject::connect(ui->action_Sim_SingleStep, SIGNAL(triggered(bool)), this, SLOT(sim_SingleStep()));
     QObject::connect(ui->action_Sim_DisplaySymbols, SIGNAL(triggered(bool)), this, SLOT(sim_DisplaySymbols()));
@@ -191,6 +192,16 @@ void SpimView::InitializeWorld()
         //
         initialize_world(NULL);
     }
+}
+
+
+void SpimView::UpdateDataDisplay()
+{
+    // Text segment rarely changes -- update manually
+    //
+    DisplayIntRegisters();
+    DisplayFPRegisters();
+    DisplayDataSegments();
 }
 
 
